Created method get user info
